--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,30 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+<!--      <main class="main">-->
+<!--        <div class="container">-->
+<!--          {{ meetups }}-->
+<!--          <div class="filters-panel">-->
+<!--            <div class="filters-panel__col">-->
+<!--              <div class="form-check">-->
+<!--                <div class="form-check__group">-->
+<!--                  <input-->
+<!--                          type="radio"-->
+<!--                          class="form-check__input"-->
+<!--                          name="date"-->
+<!--                          checked="checked"-->
+<!--                          value="all"-->
+<!--                  />-->
+<!--                  <label class="form-check__label">All</label>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </main>-->
+    </div>
     <!-- built files will be auto injected -->
+    <script type="module" src="script.js"></script>
   </body>
 </html>
